[project]
name = "rom-editor"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Shlomo Rabinowitz", email = "dev@koshermyphone.com" }]
requires-python = ">=3.13"
dependencies = [
    "apk-editor",
    "appdirs>=1.4.4",
    "cryptography>=44.0.0",
    "psutil>=6.1.0",
    "rich>=13.9.4",
    "xattr>=1.1.0",
]

[project.scripts]
rom-editor = "rom_editor:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
apk-editor = { git = "https://github.com/koshermyphone/apk-editor-py" }
